# LearnOpenGL

./: CMakeLists.txt
libs/: CMakeLists.txt
libs/glad/: glad.c
libs/glad/glad/: glad.h
libs/glfw/: CMakeLists.txt
libs/my_utils/: CMakeLists.txt  my_utils.h
tutorials/: CMakeLists.txt
tutorials/01_getting_started/: CMakeLists.txt
tutorials/01_getting_started/a_hello_window/: CMakeLists.txt  main.cpp
tutorials/01_getting_started/b_hello_triangle/: CMakeLists.txt  main.cpp
tutorials/01_getting_started/b_hello_triangle/exercise_1/: CMakeLists.txt  main.cpp
tutorials/01_getting_started/b_hello_triangle/exercise_2/: CMakeLists.txt  main.cpp
tutorials/01_getting_started/b_hello_triangle/exercise_3/: CMakeLists.txt  main.cpp  triangle_fs.glsl  triangle_fs_1.glsl
tutorials/01_getting_started/b_hello_triangle/my_diamond/: CMakeLists.txt  main.cpp
tutorials/01_getting_started/c_shaders/: CMakeLists.txt  main.cpp  shaders.vs.glsl
tutorials/01_getting_started/c_shaders/rotating_triangle/: CMakeLists.txt  main.cpp  triangle.vs.glsl
wrappers/: CMakeLists.txt  shader.cpp  shader.h  shader_program.cpp  shader_program.h
